data/derived/fa15/progs/unify/prog2094.ml.out
Characters 101-105:
  wwhile (fs b,b);;
          ^^^^
Error: This expression has type int but an expression was expected of type
         'a -> 'a * bool
